Autentication and session set up

--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,2 +1,13 @@
-<h1> Welcome Bud
-</h1>
+<html>
+<body>
+
+<h1>Welcome Page</h1>
+
+<p> You should be navigated to "/login" if no session or navigated to corresponding page based on logged in customer</p>
+
+<p><a href="http://localhost:3000/login">Login!</a></p>
+
+<p><a href="http://localhost:3000/create">Create User!</a></p>
+
+</body>
+</html>
